 $Id: ChangeLog,v 1.131.2.25.2.127 2010/10/12 13:59:04 uehira Exp $

2010-10-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/order.c, src/raw_raw.c, src/raw_time.c, src/send_raw.c,
	  src/shmdump.c, src/wdisk.c : fixed eobsize_in counter bug.
	* src/raw_ch.c : 64bit check. eobsize_in(auto). fixed a bug.
	* src/raw_100.c : 64bit check. eobsize_in(auto).
	* src/ls8tel_STS.c : 64bit check.
	* src/ls8tel_STM.c : 64bit check.
	* src/ls8tel16_win.c : 64bit check.
	* src/ls8tel16_raw.c : 64bit check.
	* src/elist.c : Fixed bug. 64bit check.
	* src/file_older.c : ANSI C
	* Version 2.1.10 released.

2010-10-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/ecore2.c : 64bit clean?

2010-10-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/ecore.c : 64bit clean? & fixed bugs.

2010-10-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/cormeisei.c : 64bit check? & fixed bugs.
	* src/insert_trg.c : 64bit check.
	* src/insert_raw.c : fixed buffer overrun bugs.
	                     safe for dangling pointer.

2010-10-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wform.c : 64bit clean.
	* src/winrandsimu6.c : 64bit clean?
	* src/wintowin.c : 64bit clean?
	* src/wintosac.c : ANSI C
	* src/timeout.c : ANSI C
	* src/select_bylatlon.c : ANSI C
	* src/select_stations.c : ANSI C

2010-10-04  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt.c : fixed bugs in check_pno().
	                ht[].pnos[] : unsigned int --> int
	* src/relay.c : partial backout check_pno().
	* src/relaym.c : 64bit clean.
	* src/winlib.c : check_ts()
	* configure.in : use statvfs() in case of __SVR4 (SunOS)
	* src/recvt_LS7000.c : 64bit clean?

2010-10-02  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* configure.in : force #include <sys/param.h> at the time of
  	                 <sys/mount.h> existance check.

2010-09-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus.c : 64bit check.
	* src/recvstatus2.c : added daemon mode. 64bit check.