@@ -1,21 +1,24 @@
-/* $Id: raw_shift.c,v 1.2.4.3.2.8 2010/09/29 06:23:48 uehira Exp $ */
+/* $Id: raw_shift.c,v 1.2.4.3.2.9 2010/10/12 15:32:07 uehira Exp $ */
 
 /* "raw_shift.c"    2002.4.1 - 4.1 urabe */
 /*                  modified from raw_100.c */
 /*                  2005.2.20 added fclose() in read_chfile() */
+/*                   2010.10.12 64bit clean. eobsize_in(auto) (uehira) */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
+
+#include <sys/types.h>
+#include <sys/ipc.h>
+#include <sys/shm.h>
 
 #include <stdio.h>
 #include <signal.h>
 #include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
-#include <sys/types.h>
-#include <sys/ipc.h>
-#include <sys/shm.h>
+#include <errno.h>
 
 #if TIME_WITH_SYS_TIME
 #include <sys/time.h>
@@ -28,36 +31,45 @@
 #endif  /* !HAVE_SYS_TIME_H */
 #endif  /* !TIME_WITH_SYS_TIME */
 
-#include <sys/types.h>
-#include <errno.h>
-
 #include "winlib.h"
 
 /* #define DEBUG       0 */
 #define BELL        0
 #define MAX_SR   4095
 
-unsigned char ch_table[WIN_CHMAX];
-char *progname,*logfile,chfile[256];
-int n_ch,negate_channel;
-int syslog_mode = 0, exit_status;
+static const char rcsid[] =
+  "$Id: raw_shift.c,v 1.2.4.3.2.9 2010/10/12 15:32:07 uehira Exp $";
 
+static uint8_w ch_table[WIN_CHMAX];
+char *chfile;
+int n_ch,negate_channel;
+
+int syslog_mode = 0, exit_status;
+char *progname,*logfile;
+
+/* prototypes */
+static void read_chfile(void);
+int main(int, char *[]);
+
+static void
 read_chfile()
   {
   FILE *fp;
   int i,j,k;
   char tbuf[1024];
-  if(*chfile)
+
+  if(chfile!=NULL)
     {
     if((fp=fopen(chfile,"r"))!=NULL)
       {
 #if DEBUG
       fprintf(stderr,"ch_file=%s\n",chfile);
+
 #endif
       if(negate_channel) for(i=0;i<WIN_CHMAX;i++) ch_table[i]=1;
       else for(i=0;i<WIN_CHMAX;i++) ch_table[i]=0;
       i=j=0;
-      while(fgets(tbuf,1024,fp))
+      while(fgets(tbuf,sizeof(tbuf),fp))
         {
         if(*tbuf=='#' || sscanf(tbuf,"%x",&k)<0) continue;
         k&=0xffff;
@@ -86,8 +98,8 @@ read_chfile()
       fprintf(stderr,"\n");
 #endif
       n_ch=j;
-      if(negate_channel) sprintf(tbuf,"-%d channels",n_ch);
-      else sprintf(tbuf,"%d channels",n_ch);
+      if(negate_channel) snprintf(tbuf,sizeof(tbuf),"-%d channels",n_ch);
+      else snprintf(tbuf,sizeof(tbuf),"%d channels",n_ch);
       write_log(tbuf);
       fclose(fp);
       }
@@ -96,7 +108,7 @@ read_chfile()
 #if DEBUG
       fprintf(stderr,"ch_file '%s' not open\n",chfile);
 #endif
-      sprintf(tbuf,"channel list file '%s' not open",chfile);
+      snprintf(tbuf,sizeof(tbuf),"channel list file '%s' not open",chfile);
       write_log(tbuf);
       write_log("end");
       exit(1);
@@ -111,29 +123,34 @@ read_chfile()
   signal(SIGHUP,(void *)read_chfile);
   }
 
-main(argc,argv)
-  int argc;
-  char *argv[];
+int
+main(int argc, char *argv[])
   {
   struct Shm  *shr,*shm;
   key_t rawkey,monkey;
   /* int shmid_raw,shmid_mon; */
-  unsigned long uni;
+  uint32_w uni;
   char tb[100];
-  unsigned char *ptr,*ptw,*ptr_lim,*ptr_save;
-  int sr,i,size,size_shm,tow,rest,bits_shift;
-  uint16_w ch1;
-  uint32_w sr1;
-  unsigned long c_save;
-  unsigned short ch;
-  int gs,gh,gs1;
+  uint8_w *ptr,*ptw,*ptr_lim,*ptr_save;
+  int i,tow,rest,bits_shift;
+  int eobsize_in, eobsize_in_count;
+  WIN_sr  sr;
+  WIN_bs  size;
+  size_t  size_shm;
+  WIN_ch ch1;
+  WIN_sr  sr1;
+  unsigned long c_save;  /* 64bit ok */
+  WIN_ch ch;
+  uint32_w gs,gs1;
   static int32_w buf1[MAX_SR],buf2[MAX_SR];
 
   if((progname=strrchr(argv[0],'/')) != NULL) progname++;
   else progname=argv[0];
   exit_status = EXIT_SUCCESS;
-  if(argc<4)
+  if(argc<5)
     {
+    WIN_version();
+    fprintf(stderr, "%s\n", rcsid);
     fprintf(stderr,
       " usage : '%s [in_key] [out_key] [shm_size(KB)] [bits]\\\n",
       progname);
@@ -143,34 +160,38 @@ main(argc,argv)
     }
   rawkey=atol(argv[1]);
   monkey=atol(argv[2]);
-  size_shm=atol(argv[3])*1000;
+  size_shm=(size_t)atol(argv[3])*1000;
   bits_shift=atoi(argv[4]);
-  *chfile=0;
+  chfile=NULL;
   rest=1;
+  eobsize_in = 0;
   if(argc>5)
     {
-    if(strcmp("-",argv[5])==0) *chfile=0;
+    if(strcmp("-",argv[5])==0) chfile=NULL;
     else
       {
       if(argv[5][0]=='-')
         {
-        strcpy(chfile,argv[5]+1);
+        chfile=argv[5]+1;
         negate_channel=1;
         }
       else if(argv[5][0]=='+')
         {
-        strcpy(chfile,argv[5]+1);
+	chfile=argv[5]+1;
         negate_channel=0;
         }
       else
         {
-        strcpy(chfile,argv[5]);
+        chfile=argv[5];
         rest=negate_channel=0;
         }
       }
     }    
   if(argc>6) logfile=argv[6];
   else logfile=NULL;
+
+  snprintf(tb,sizeof(tb),"bit_shift=%d",bits_shift);
+  write_log(tb);
     
   read_chfile();
 
@@ -199,14 +220,35 @@ reset:
   /*   shm->p=shm->c=0; */
   /*   shm->pl=(size_shm-sizeof(*shm))/10*9; */
   /*   shm->r=(-1); */
-  ptr=shr->d;
+  /* ptr=shr->d; */  /* verbose */
   while(shr->r==(-1)) sleep(1);
   ptr=shr->d+shr->r;
   tow=(-1);
 
+  size = mkuint4(ptr);
+  if (mkuint4(ptr + size - 4) == size)
+    eobsize_in = 1;
+  else
+    eobsize_in = 0;
+  eobsize_in_count = eobsize_in;
+  snprintf(tb,sizeof(tb),"eobsize_in=%d",eobsize_in);
+  write_log(tb);
+
   for(;;)
     {
-    ptr_lim=ptr+(size=mkuint4(ptr_save=ptr));
+    /* ptr_lim=ptr+(size=mkuint4(ptr_save=ptr)); */
+    size=mkuint4(ptr_save=ptr);
+    if (mkuint4(ptr+size-4) == size) {
+      if (++eobsize_in_count == 0)
+	eobsize_in_count = 1;
+    } else
+      eobsize_in_count=0;
+    if(eobsize_in && eobsize_in_count==0) goto reset;
+    if(!eobsize_in && eobsize_in_count>3) goto reset;
+    ptr_lim=ptr+size;
+    if(eobsize_in)
+      ptr_lim -= 4;
+
     c_save=shr->c;
     ptr+=4;
 #if DEBUG
@@ -216,13 +258,13 @@ reset:
   /* make output data */
     ptw=shm->d+shm->p;
     ptw+=4;               /* size (4) */
-    uni=time(NULL);
+    uni=(uint32_w)(time(NULL)-TIME_OFFSET);
     i=uni-mkuint4(ptr);
     if(i>=0 && i<1440)   /* with tow */
       {
       if(tow!=1)
         {
-        sprintf(tb,"with TOW (diff=%ds)",i);
+	snprintf(tb,sizeof(tb),"with TOW (diff=%ds)",i);
         write_log(tb);
         if(tow==0)
           {
@@ -251,15 +293,16 @@ reset:
 
     do    /* loop for ch's */
       {
-      gh=mkuint4(ptr);
-      ch=(gh>>16)&0xffff;
-      sr=gh&0xfff;
-      if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8;
-      else gs=(sr>>1)+8;
+      /* gh=mkuint4(ptr); */
+      /* ch=(gh>>16)&0xffff; */
+      /* sr=gh&0xfff; */
+      /* if((gh>>12)&0xf) gs=((gh>>12)&0xf)*(sr-1)+8; */
+      /* else gs=(sr>>1)+8; */
+      gs = win_get_chhdr(ptr, &ch, &sr);
       if(ch_table[ch])
         {
 #if DEBUG
-        fprintf(stderr," %d",gs);
+        fprintf(stderr," %u",gs);
 #endif
         if(sr<=MAX_SR)
           {
@@ -267,7 +310,7 @@ reset:
           for(i=0;i<sr1;i++) buf2[i]=buf1[i]>>bits_shift;
           ptw+=(gs1=winform(buf2,ptw,sr1,ch1));
 #if DEBUG
-          fprintf(stderr,"->%d ",gs1);
+          fprintf(stderr,"->%u ",gs1);
 #endif
           }
         else
@@ -285,9 +328,9 @@ reset:
       } while(ptr<ptr_lim);
     if(tow) i=14;
     else i=10;
-    if((uni=ptw-(shm->d+shm->p))>i)
+    if((uni=(uint32_w)(ptw-(shm->d+shm->p)))>i)
       {
-      uni=ptw-(shm->d+shm->p);
+      /* uni=ptw-(shm->d+shm->p); */ /* verbose */
       shm->d[shm->p  ]=uni>>24; /* size (H) */
       shm->d[shm->p+1]=uni>>16;
       shm->d[shm->p+2]=uni>>8;
@@ -308,7 +351,7 @@ reset:
     fprintf(stderr,"\007");
     fflush(stderr);
 #endif
-    if((ptr=ptr_lim)>shr->d+shr->pl) ptr=shr->d;
+    if((ptr=ptr_save+size)>shr->d+shr->pl) ptr=shr->d;
     while(ptr==shr->d+shr->p) usleep(100000);
     if(shr->c<c_save || mkuint4(ptr_save)!=size)
       {
